2004-01-08  John Luke  <jluke@cfl.rr.com>
	
	* */*/.xml: run updater
	* en/Gtk/TreView.xml: correct GetRowExpanded docs
	* en/Gtk/RadioButton.xml: documented

2003-12-22  John Luke  <jluke@cfl.rr.com>

	* en/GLib/GType.xml:
	* en/GLib/DefaultSignalHandlerAttribute.xml: added
	* */*/.xml: run updater

2003-12-08  John Luke  <jluke@cfl.rr.com>

	* en/Art/Rgba.xml: update
	* en/Gnome/FileEntry.xml:
	* en/Gnome/Druid.xml:
	* en/Gnome/DruidPage.xml:
	* en/Gnome/DruidPageEdge.xml:
	* en/Gnome/DruidPageStandard.xml: documented
	
2003-12-04  John Luke  <jluke@cfl.rr.com>

	* All: run updater
	
2003-11-22  John Luke  <jluke@cfl.rr.com>

	* en/Gnome/Print.xml: add example

2003-11-18  John Luke  <jluke@cfl.rr.com>

	* en/Gnome/CanvasPixbuf.xml: correct HeightInPixels from Sebastian <scut@nb.in-berlin.de>

2003-11-18  Peter Williams  <peter@newton.cx>
 
	* en/Gtk/NodeStore.xml: Document new GetNode functions.
 
2003-11-17  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Socket.xml: documented
	
2003-11-16  John Luke  <jluke@cfl.rr.com>

	* en/Gdk/Atom.xml: documented
	* en/Gtk/Clipboard.xml: documented
	* en/Gtk/Stock.xml: documented
	* en/Gtk/StockItem.xml: documented

2003-11-12  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Quit.xml: documented
	* en/Gtk/TooltipsData.xml: documented
	* en/Gtk/TODO: update
	* en/Gtk/ToolbarSpaceStyle.xml: documented
	
2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/NodeStore.xml : documented

2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/TreeNode.xml : documented
	* en/Gtk/TreeView.xml : documented NodeStore ctor.

2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/ITreeNode.xml : documented
	* en/Gtk/TreeNodeAddedHandler.xml : documented
	* en/Gtk/TreeNodeRemovedHandler.xml : documented

2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/TreeNodeAttribute.xml : documented
	* en/Gtk/TreeNodeValueAttribute.xml : documented

2003-11-04  John Luke  <jluke@cfl.rr.com>

	* en/*/*.xml: run updater
