@@ -53,13 +53,13 @@
       </Docs>
     </Member>
     <Member MemberName=".ctor">
-      <MemberSignature Language="C#" Value="public ClientBase ();" />
+      <MemberSignature Language="C#" Value="protected ClientBase ();" />
       <MemberType>Constructor</MemberType>
       <ReturnValue />
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <returns>To be added: an object of type 'GConf.ClientBase'</returns>
+        <returns>a <see cref="T:GConf.ClientBase" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
