@@ -703,7 +703,8 @@
       <Docs>
         <summary>Creates a new <see cref="T:Gtk.Label" /> without text.</summary>
         <returns>a <see cref="T:Gtk.Label" /></returns>
-        <remarks></remarks>
+        <remarks>
+        </remarks>
       </Docs>
     </Member>
   </Members>
