@@ -1049,5 +1049,21 @@ class NotebookSample
         <remarks>To be added</remarks>
       </Docs>
     </Member>
+    <Member MemberName="PageNum">
+      <MemberSignature Language="C#" Value="public int PageNum (Gtk.Widget child);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Int32</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="child" Type="Gtk.Widget" />
+      </Parameters>
+      <Docs>
+        <summary>To be added</summary>
+        <param name="child">a <see cref="T:Gtk.Widget" /></param>
+        <returns>a <see cref="T:System.Int32" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
