@@ -30,34 +30,6 @@
   </Interfaces>
   <Attributes />
   <Members>
-    <Member MemberName="Num">
-      <MemberSignature Language="C#" Value="public static int Num (Gtk.Notebook notebook, Gtk.Widget child);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Int32</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="notebook" Type="Gtk.Notebook" />
-        <Parameter Name="child" Type="Gtk.Widget" />
-      </Parameters>
-      <Docs>
-        <summary>Returns the number of the NotebookPage containing the
-	  widget 'child' in the Notebook.
-	</summary>
-        <param name="notebook">The Notebook that contains the widget 'child'.</param>
-        <param name="child">The widget we are looking for.</param>
-        <returns>The number of the NotebookPage containing the given
-	  widget. -1 if the widget is not found in the Notebook.
-	</returns>
-        <remarks>
-          <para>
-	     Returns the number of the NotebookPage containing a
-             given widget in a given Notebook or -1 if the widget is not
-             found.
-	  </para>
-        </remarks>
-      </Docs>
-    </Member>
     <Member MemberName=".ctor">
       <MemberSignature Language="C#" Value="public NotebookPage (IntPtr raw);" />
       <MemberType>Constructor</MemberType>
