@@ -13,9 +13,9 @@
     <summary>A choice from multiple buttons in a group.</summary>
     <remarks>
       <para>A single radio button performs the same basic function as a <see cref="Gtk.CheckButton" />, as its position in the object hierarchy reflects. It is only when multiple radio buttons are grouped together that they become a different user interface component in their own right.</para>
-	  <para>Every radio button is a member of some group of radio buttons. When one is selected, all other radio buttons in the same group are deselected. A <see cref="T:Gtk.RadioButton" /> is one way of giving the user a choice from many options.</para>
-	  <para>Radio button widgets are created with <see cref="C:Gtk.RadioButton(System.String)" />,  if this is the first radio button in a group. In subsequent calls, the group you wish to add this button to should be passed as an argument.</para>
-	</remarks>
+      <para>Every radio button is a member of some group of radio buttons. When one is selected, all other radio buttons in the same group are deselected. A <see cref="T:Gtk.RadioButton" /> is one way of giving the user a choice from many options.</para>
+      <para>Radio button widgets are created with <see cref="C:Gtk.RadioButton(System.String)" />,  if this is the first radio button in a group. In subsequent calls, the group you wish to add this button to should be passed as an argument.</para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.CheckButton</BaseTypeName>
@@ -137,6 +137,19 @@
       <Docs>
         <summary>To be added</summary>
         <returns>a <see cref="T:GLib.GType" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Group">
+      <MemberSignature Language="C#" Value="public GLib.SList Group { set; get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>GLib.SList</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>To be added</summary>
+        <returns>a <see cref="T:GLib.SList" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
