@@ -1,5 +1,12 @@
 2004-01-08  John Luke  <jluke@cfl.rr.com>
 	
+	* en/Gtk/RadioButton.xml:
+	* en/Gtk/Notebook.xml:
+	* en/Gtk/NotebookPage.xml:
+	* en/GConf/ClientBase.xml: update for recent cvs changes
+
+2004-01-08  John Luke  <jluke@cfl.rr.com>
+	
 	* */*/.xml: run updater
 	* en/Gtk/TreView.xml: correct GetRowExpanded docs
 	* en/Gtk/RadioButton.xml: documented
